# gamma-swap

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  log.txt
client/: Cargo.toml
client/src/: main.rs  test_swaps.rs
client/src/instructions/: amm_instructions.rs  events_instructions_parse.rs
cpi/clmm-cpi/: Cargo.toml
cpi/clmm-cpi/src/: lib.rs
cpi/cpmm-cpi/: Cargo.toml
cpi/cpmm-cpi/src/: lib.rs  raydium_cp_swap.json
cpi/dlmm-cpi/: Cargo.toml
cpi/dlmm-cpi/src/: lb_clmm.json  lib.rs
cpi/kamino-cpi/: Cargo.toml
cpi/kamino-cpi/src/: collateral_exchange_rate.rs  kamino.json  lib.rs
cpi/whirlpool-cpi/: Cargo.toml
cpi/whirlpool-cpi/src/: lib.rs  whirlpool.json
idls/: amm_v3.json  kamino.json  lb_clmm.json  raydium_cp_swap.json  whirlpool.json
idls/originals/: amm_v3.json  kamino.json  lb_clmm.json
programs/gamma/: Cargo.toml
programs/gamma/src/: error.rs  lib.rs
programs/gamma/src/curve/: calculator.rs  constant_product.rs  mod.rs
programs/gamma/src/fees/: dynamic_fee.rs  mod.rs  static_fees.rs
programs/gamma/src/instructions/: calculate_rewards.rs  claim_rewards.rs  create_rewards.rs  deposit.rs  init_user_pool_liquidity.rs  initialize.rs  migrate_orca_to_gamma.rs  mod.rs  rebalance.rs  swap_base_input.rs  swap_base_output.rs  withdraw.rs
programs/gamma/src/instructions/admin/: collect_fund_fee.rs  collect_protocol_fee.rs  create_config.rs  create_referral_project.rs  mod.rs  update_config.rs  update_pool.rs  update_pool_status.rs  update_volatility_v2_params.rs
programs/gamma/src/migration/: mod.rs
programs/gamma/src/migration/meteora/: meteora_dlmm_to_gamma.rs  mod.rs
programs/gamma/src/migration/orca/: mod.rs  orca_whirlpool_to_gamma.rs  orca_whirlpool_to_gamma_v2.rs
programs/gamma/src/migration/raydium/: mod.rs  raydium_clmm_to_gamma.rs  raydium_clmm_to_gamma_v2.rs  raydium_cp_swap_to_gamma.rs
programs/gamma/src/states/: config.rs  events.rs  mod.rs  oracle.rs  pool.rs  pool_kamino_deposits.rs  reward_info.rs  user_pool_liquidity.rs  user_reward_info.rs
programs/gamma/src/utils/: math.rs  mod.rs  swap_referral.rs  token.rs
programs/gamma/tests/: calculate_rewards.rs  claim_rewards.rs  create_rewards.rs  jupiter_quotes.rs  partner_program.rs  swap_test.rs
programs/gamma/tests/utils/: jupiter.rs  mod.rs
scripts/: migrateAllPool.ts  printAllPools.ts
tests/: gamma.ts
