[workspace]
members = [
    "programs/*",
    "client", 
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-client = { version = "0.30.1" }
anchor-gen = "0.3.1"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
spl-associated-token-account= "3.0.4"
anyhow = "1"
arrayref = "0.3.7"
bincode = "1.3.3"
bs58 = { version = "0.5.0"}
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
clap = { version = "3", features = [ "derive", "env" ] }
colorful = "0.2.2"
configparser = "3.0.0"
criterion = "0.5"
dotenv = "0.15.0"
glob = "0.3.1"
hex = "0.4.3"
itertools = "0.11.0"
jupiter-amm-interface = "0.4.5"
once_cell = "1"
peace-lock = "0.1"
proptest = "1.0"
quickcheck = "0.9"
rand = "0.8.5"
referral = { git = "https://github.com/GooseFX1/gfx-referral.git", branch = "make-types-public-0.30.1", features = ["cpi"] }
regex = "1"
rust_decimal = { version = "1.36.0", features = ["maths", "c-repr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-program-runtime = "1.17"
solana-program-test = "1.17"
solana-sdk = "1.17"
solana-security-txt = "1.1.1"
solana-transaction-status = "1.17"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
spl-memo = "4.0.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
spl-token-client = "0.7.0"
static_init = "1.0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uint = "0.9.1"
url = "2"
zstd = "0.12"
ahash = "0.8.11"

base64 = "0.21.0"
solana-bpf-simulator = { git = "https://github.com/dovahcrow/solana-bpf-simulator" }

gamma = { path = "programs/gamma", features = ["no-entrypoint"] }
fixed = { version = "=1.23.1" }
fixed-macro = "1.1"